--- a/FDCS_2/FDCS_2_models_GridSearch.ipynb
+++ b/FDCS_2/FDCS_2_models_GridSearch.ipynb
@@ -25,6 +25,29 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script reads a CSV file into a pandas DataFrame, preprocesses the data using a custom preprocessing function,\n",
+    "and prints the shapes of the normalized training, validation, and test datasets.\n",
+    "\n",
+    "Modules:\n",
+    "    pandas\n",
+    "    numpy\n",
+    "    warnings\n",
+    "    FDCS_1_Elec_pre_processing (custom module)\n",
+    "\n",
+    "Functions:\n",
+    "    preprocess_data(df): Preprocesses the input DataFrame and returns normalized training, validation, and test datasets.\n",
+    "\n",
+    "Variables:\n",
+    "    df (DataFrame): The input data read from a CSV file.\n",
+    "    output_names (list): List containing the name of the output variable.\n",
+    "    X_train_normalized (ndarray): Normalized training features.\n",
+    "    y_train_normalized (ndarray): Normalized training labels.\n",
+    "    X_val_normalized (ndarray): Normalized validation features.\n",
+    "    y_val_normalized (ndarray): Normalized validation labels.\n",
+    "    X_test_normalized (ndarray): Normalized test features.\n",
+    "    y_test_normalized (ndarray): Normalized test labels.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -215,6 +238,24 @@
    ],
    "source": [
     "from FDCS_1_models_GridSearch import run_model\n",
+    "\"\"\"\n",
+    "This script imports the `run_model` function from the `FDCS_1_models_GridSearch` module and executes it with the provided training and validation datasets. The function returns three objects: `metrics_df`, `pred_true_ValSet`, and `best_params_df`.\n",
+    "\n",
+    "Variables:\n",
+    "    metrics_df (DataFrame): A DataFrame containing the performance metrics of the model.\n",
+    "    pred_true_ValSet (DataFrame): A DataFrame containing the predicted and true values for the validation set.\n",
+    "    best_params_df (DataFrame): A DataFrame containing the best hyperparameters found during the grid search.\n",
+    "\n",
+    "Parameters:\n",
+    "    X_train_normalized (array-like): The normalized training feature set.\n",
+    "    y_train_normalized (array-like): The normalized training target set.\n",
+    "    X_val_normalized (array-like): The normalized validation feature set.\n",
+    "    y_val_normalized (array-like): The normalized validation target set.\n",
+    "    output_names (list): A list of output names for the model.\n",
+    "\n",
+    "Returns:\n",
+    "    pred_true_ValSet (DataFrame): The DataFrame containing the predicted and true values for the validation set.\n",
+    "\"\"\"\n",
     "metrics_df, pred_true_ValSet, best_params_df = run_model(X_train_normalized, y_train_normalized,\n",
     "                                                         X_val_normalized,y_val_normalized,\n",
     "                                                         output_names)\n",
@@ -467,6 +508,24 @@
    ],
    "source": [
     "from FDCS_1_LSTm_GridSearch import run_lstm_model\n",
+    "\"\"\"\n",
+    "This script imports the `run_lstm_model` function from the `FDCS_1_LSTm_GridSearch` module and executes it with the provided training and validation datasets. The function returns three outputs: a DataFrame containing the evaluation metrics, a DataFrame with the predicted and true values for the validation set, and a dictionary of the best hyperparameters found during the grid search.\n",
+    "\n",
+    "Functions:\n",
+    "    run_lstm_model(X_train, y_train, X_val, y_val, output_names): Runs the LSTM model with grid search and returns evaluation metrics, predictions, and best hyperparameters.\n",
+    "\n",
+    "Variables:\n",
+    "    metrics_df (pd.DataFrame): DataFrame containing the evaluation metrics of the model.\n",
+    "    pred_true_ValSet (pd.DataFrame): DataFrame containing the predicted and true values for the validation set.\n",
+    "    best_hyperparams_dict (dict): Dictionary containing the best hyperparameters found during the grid search.\n",
+    "\n",
+    "Parameters:\n",
+    "    X_train_normalized (np.ndarray): Normalized training feature set.\n",
+    "    y_train_normalized (np.ndarray): Normalized training target set.\n",
+    "    X_val_normalized (np.ndarray): Normalized validation feature set.\n",
+    "    y_val_normalized (np.ndarray): Normalized validation target set.\n",
+    "    output_names (list): List of output names for the model.\n",
+    "\"\"\"\n",
     "metrics_df, pred_true_ValSet, best_hyperparams_dict = run_lstm_model(X_train_normalized,\n",
     "                                                                      y_train_normalized,\n",
     "                                                                      X_val_normalized,\n",
@@ -561,6 +620,29 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script reads a CSV file, preprocesses the data using a custom preprocessing function, \n",
+    "and prints the shapes of the normalized training, validation, and test datasets.\n",
+    "\n",
+    "Functions:\n",
+    "    preprocess_data(df): Preprocesses the input DataFrame and returns normalized training, \n",
+    "                         validation, and test datasets.\n",
+    "\n",
+    "Modules:\n",
+    "    pandas: Library for data manipulation and analysis.\n",
+    "    numpy: Library for numerical computations.\n",
+    "    warnings: Library to manage warnings.\n",
+    "\n",
+    "Variables:\n",
+    "    df (DataFrame): The input data read from a CSV file.\n",
+    "    output_names (list): List containing the name of the output variable.\n",
+    "    X_train_normalized (ndarray): Normalized training features.\n",
+    "    y_train_normalized (ndarray): Normalized training target.\n",
+    "    X_val_normalized (ndarray): Normalized validation features.\n",
+    "    y_val_normalized (ndarray): Normalized validation target.\n",
+    "    X_test_normalized (ndarray): Normalized test features.\n",
+    "    y_test_normalized (ndarray): Normalized test target.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -902,6 +984,23 @@
    ],
    "source": [
     "from FDCS_1_models import run_model\n",
+    "\"\"\"\n",
+    "This script imports the `run_model` function from the `FDCS_1_models` module and uses it to run a model on normalized training and test datasets. The results are stored in a DataFrame `metrics_df`.\n",
+    "\n",
+    "Functions:\n",
+    "    run_model: Executes a model with the provided training and test datasets and returns performance metrics.\n",
+    "\n",
+    "Variables:\n",
+    "    metrics_df (DataFrame): A DataFrame containing the performance metrics of the model.\n",
+    "\n",
+    "Usage:\n",
+    "    The script assumes that the following variables are defined and contain the appropriate data:\n",
+    "    - X_train_val_normalized: Normalized training and validation features.\n",
+    "    - y_train_val_normalized: Normalized training and validation labels.\n",
+    "    - X_test_normalized: Normalized test features.\n",
+    "    - y_test_normalized: Normalized test labels.\n",
+    "    - output_names: Names of the output metrics.\n",
+    "\"\"\"\n",
     "metrics_df = run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "metrics_df"
    ]
@@ -2656,6 +2755,26 @@
    ],
    "source": [
     "from FDCS_1_LSTM import run_lstm_model\n",
+    "\"\"\"\n",
+    "This script imports the `run_lstm_model` function from the `FDCS_1_LSTM` module and uses it to train and evaluate an LSTM model.\n",
+    "\n",
+    "Functions:\n",
+    "    run_lstm_model: Trains and evaluates an LSTM model using the provided training and test data.\n",
+    "\n",
+    "Variables:\n",
+    "    metrics_df (DataFrame): A DataFrame containing the evaluation metrics of the LSTM model.\n",
+    "\n",
+    "Usage:\n",
+    "    The script expects the following variables to be defined before execution:\n",
+    "    - X_train_val_normalized: Normalized training and validation features.\n",
+    "    - y_train_val_normalized: Normalized training and validation labels.\n",
+    "    - X_test_normalized: Normalized test features.\n",
+    "    - y_test_normalized: Normalized test labels.\n",
+    "    - output_names: Names of the output variables.\n",
+    "\n",
+    "Returns:\n",
+    "    metrics_df: A DataFrame containing the evaluation metrics of the LSTM model.\n",
+    "\"\"\"\n",
     "\n",
     "metrics_df = run_lstm_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "metrics_df"
@@ -3005,6 +3124,23 @@
    ],
    "source": [
     "from FDCS_1_models import run_model\n",
+    "\"\"\"\n",
+    "This script imports the `run_model` function from the `FDCS_1_models` module and uses it to run a model on normalized training and test datasets. The results are stored in a DataFrame `metrics_df`.\n",
+    "\n",
+    "Functions:\n",
+    "    run_model: Executes a model with the provided training and test datasets and returns a DataFrame with the evaluation metrics.\n",
+    "\n",
+    "Variables:\n",
+    "    metrics_df (DataFrame): A DataFrame containing the evaluation metrics of the model.\n",
+    "\n",
+    "Usage:\n",
+    "    The script expects the following variables to be defined before execution:\n",
+    "    - X_train_val_normalized: Normalized training and validation features.\n",
+    "    - y_train_val_normalized: Normalized training and validation labels.\n",
+    "    - X_test_normalized: Normalized test features.\n",
+    "    - y_test_normalized: Normalized test labels.\n",
+    "    - output_names: List of output names for the model.\n",
+    "\"\"\"\n",
     "metrics_df = run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "metrics_df"
    ]
@@ -5154,6 +5290,26 @@
    ],
    "source": [
     "from FDCS_1_LSTM import run_lstm_model\n",
+    "\"\"\"\n",
+    "This script imports the `run_lstm_model` function from the `FDCS_1_LSTM` module and uses it to train and evaluate an LSTM model.\n",
+    "\n",
+    "Functions:\n",
+    "    run_lstm_model: Trains and evaluates an LSTM model using the provided training and testing data.\n",
+    "\n",
+    "Variables:\n",
+    "    metrics_df (DataFrame): A DataFrame containing the evaluation metrics of the LSTM model.\n",
+    "\n",
+    "Usage:\n",
+    "    The script expects the following variables to be defined before execution:\n",
+    "    - X_train_val_normalized: Normalized training and validation features.\n",
+    "    - y_train_val_normalized: Normalized training and validation labels.\n",
+    "    - X_test_normalized: Normalized testing features.\n",
+    "    - y_test_normalized: Normalized testing labels.\n",
+    "    - output_names: List of output names for the model.\n",
+    "\n",
+    "Example:\n",
+    "    print(metrics_df)\n",
+    "\"\"\"\n",
     "\n",
     "metrics_df = run_lstm_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "metrics_df"
