--- a/FDCS_2/FDCS_2_Results.ipynb
+++ b/FDCS_2/FDCS_2_Results.ipynb
@@ -29,12 +29,41 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script preprocesses electricity consumption data and combines training and validation sets.\n",
+    "\n",
+    "Modules:\n",
+    "    pandas (pd): Library for data manipulation and analysis.\n",
+    "    numpy (np): Library for numerical computations.\n",
+    "    warnings: Library to manage warnings.\n",
+    "\n",
+    "Functions:\n",
+    "    preprocess_data: Function imported from FDCS_2_Elec_pre_processing module to preprocess the data.\n",
+    "\n",
+    "Variables:\n",
+    "    df (DataFrame): DataFrame containing the raw data read from a CSV file.\n",
+    "    output_names (list): List containing the name of the output variable.\n",
+    "    X_train_normalized (ndarray): Normalized training features.\n",
+    "    y_train_normalized (ndarray): Normalized training labels.\n",
+    "    X_val_normalized (ndarray): Normalized validation features.\n",
+    "    y_val_normalized (ndarray): Normalized validation labels.\n",
+    "    X_test_normalized (ndarray): Normalized test features.\n",
+    "    y_test_normalized (ndarray): Normalized test labels.\n",
+    "    X_train_val_normalized (ndarray): Combined normalized training and validation features.\n",
+    "    y_train_val_normalized (ndarray): Combined normalized training and validation labels.\n",
+    "\n",
+    "Warnings:\n",
+    "    Ignored warnings to avoid unnecessary output.\n",
+    "\n",
+    "Prints:\n",
+    "    Shapes of the normalized training, validation, test, and combined training-validation datasets.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Elec_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Electricity Consumption']\n",
     "\n",
@@ -209,6 +238,19 @@
    ],
    "source": [
     "from FDCS_2_models_FS import run_model\n",
+    "\"\"\"\n",
+    "This script runs a model using the `run_model` function from the `FDCS_2_models_FS` module and stores the predictions and true values for the test set.\n",
+    "\n",
+    "Functions:\n",
+    "    run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names): \n",
+    "        Runs the model on the provided training and test datasets and returns the predictions and true values for the test set.\n",
+    "\n",
+    "Variables:\n",
+    "    pred_true_TestSet (tuple): \n",
+    "        A tuple containing the predictions and true values for the test set.\n",
+    "\n",
+    "Usage:\n",
+    "\"\"\"\n",
     "pred_true_TestSet = run_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "pred_true_TestSet"
    ]
@@ -587,6 +629,34 @@
    ],
    "source": [
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "\"\"\"\n",
+    "This script calculates the Mean Absolute Error (MAE) and Root Mean Squared Error (RMSE) for each feature selection (FS) method and model combination, and stores the results in a DataFrame.\n",
+    "\n",
+    "Functions:\n",
+    "    None\n",
+    "\n",
+    "Variables:\n",
+    "    pred_true_TestSet (DataFrame): A DataFrame containing the true and predicted values for different models and outputs.\n",
+    "    output_names (list): A list of output names for which the errors are to be calculated.\n",
+    "    results (list): A list to store the calculated MAE and RMSE for each model and output combination.\n",
+    "    meterc_df (DataFrame): A DataFrame containing the calculated MAE and RMSE for each model and output combination, sorted by MAE in ascending order.\n",
+    "\n",
+    "Libraries:\n",
+    "    sklearn.metrics.mean_absolute_error: Function to calculate the mean absolute error.\n",
+    "    sklearn.metrics.mean_squared_error: Function to calculate the mean squared error.\n",
+    "    numpy (as np): Library used for numerical operations.\n",
+    "    pandas (as pd): Library used for data manipulation and analysis.\n",
+    "\n",
+    "Steps:\n",
+    "    1. Iterate over each unique model in the 'Model' column of the pred_true_TestSet DataFrame.\n",
+    "    2. For each model, iterate over each output name in the output_names list.\n",
+    "    3. Extract the true and predicted values for the current model and output.\n",
+    "    4. Calculate the MAE and RMSE for the current model and output.\n",
+    "    5. Append the results to the results list.\n",
+    "    6. Convert the results list to a DataFrame (meterc_df).\n",
+    "    7. Sort the DataFrame by the 'MAE' column in ascending order.\n",
+    "    8. Round the values in the DataFrame to 4 decimal places.\n",
+    "\"\"\"\n",
     "\n",
     "# Calculate MAE and RMSE for each FS method and model\n",
     "results = []\n",
@@ -746,6 +816,22 @@
    ],
    "source": [
     "import joblib\n",
+    "\"\"\"\n",
+    "This script performs the following operations:\n",
+    "1. Imports necessary libraries: joblib and pandas.\n",
+    "2. Loads a pre-trained scaler from a joblib file.\n",
+    "3. Applies the inverse transformation to the true and predicted electricity consumption values in the test set.\n",
+    "4. Saves the transformed test set to a CSV file.\n",
+    "\n",
+    "Functions:\n",
+    "- joblib.load: Loads the saved scaler from 'scaler_y_elec.joblib'.\n",
+    "- scaler_y_loaded.inverse_transform: Applies the inverse transformation to the specified columns.\n",
+    "- pred_true_TestSet.to_csv: Saves the DataFrame to 'FDCS_2_Elec_pred_true_TestSet.csv'.\n",
+    "\n",
+    "Variables:\n",
+    "- scaler_y_loaded: The loaded scaler object.\n",
+    "- pred_true_TestSet: DataFrame containing true and predicted electricity consumption values.\n",
+    "\"\"\"\n",
     "import pandas as pd\n",
     "# Load the saved scaler\n",
     "scaler_y_loaded = joblib.load('scaler_y_elec.joblib')\n",
@@ -7642,12 +7728,22 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "This script runs an LSTM model on the provided normalized training, validation, and test datasets, \n",
+    "and returns the predictions and true values for the test set.\n",
     "\n",
-    "#import os\n",
-    "#os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\" # Set to an invalid value to use CPU\n",
+    "Functions:\n",
+    "    run_lstm_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names):\n",
+    "        Runs the LSTM model with the given normalized datasets and output names.\n",
     "\n",
+    "Variables:\n",
+    "    pred_true_TestSet: The predictions and true values for the test set returned by the LSTM model.\n",
+    "\n",
+    "Usage:\n",
+    "    Ensure that the necessary datasets (X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized) \n",
+    "    and output names (output_names) are defined before running this script.\n",
+    "\"\"\"\n",
     "from FDCS_2_LSTM_FS import run_lstm_model\n",
-    "\n",
     "pred_true_TestSet = run_lstm_model(X_train_val_normalized, y_train_val_normalized, X_test_normalized, y_test_normalized, output_names)\n",
     "pred_true_TestSet"
    ]
@@ -7783,6 +7879,28 @@
    ],
    "source": [
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "\"\"\"\n",
+    "This script calculates the Mean Absolute Error (MAE) and Root Mean Squared Error (RMSE) for each feature selection (FS) method and model combination, and stores the results in a DataFrame.\n",
+    "\n",
+    "Functions:\n",
+    "    mean_absolute_error: Calculates the mean absolute error between true and predicted values.\n",
+    "    mean_squared_error: Calculates the mean squared error between true and predicted values.\n",
+    "\n",
+    "Workflow:\n",
+    "1. Iterate over each unique model in the 'Model' column of the 'pred_true_TestSet' DataFrame.\n",
+    "2. For each model, filter the DataFrame to get the corresponding true and predicted values.\n",
+    "3. Calculate the MAE and RMSE for each output.\n",
+    "4. Append the results to a list as dictionaries containing the model, output name, MAE, and RMSE.\n",
+    "5. Convert the list of results into a DataFrame.\n",
+    "6. Sort the DataFrame by the 'MAE' column in ascending order.\n",
+    "7. Round the values in the DataFrame to 4 decimal places.\n",
+    "\n",
+    "Variables:\n",
+    "    pred_true_TestSet (DataFrame): DataFrame containing true and predicted values for each model.\n",
+    "    output_names (list): List of output names to calculate errors for.\n",
+    "    results (list): List to store the results of MAE and RMSE calculations.\n",
+    "    meterc_df (DataFrame): DataFrame to store the final sorted results.\n",
+    "\"\"\"\n",
     "\n",
     "# Calculate MAE and RMSE for each FS method and model\n",
     "results = []\n",
@@ -7965,6 +8083,22 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
+    "This script performs the following operations:\n",
+    "1. Imports necessary libraries: joblib and pandas.\n",
+    "2. Loads a pre-trained scaler from a joblib file.\n",
+    "3. Applies the inverse transformation to the true and predicted electricity consumption values.\n",
+    "4. Saves the transformed values to a CSV file.\n",
+    "\n",
+    "Functions:\n",
+    "- joblib.load: Loads the pre-trained scaler from 'scaler_y_elec.joblib'.\n",
+    "- scaler_y_loaded.inverse_transform: Applies the inverse transformation to the true and predicted values.\n",
+    "- pred_true_TestSet.to_csv: Saves the DataFrame with the transformed values to 'FDCS_2_Elec_pred_true_TestSet_LSTM.csv'.\n",
+    "\n",
+    "Variables:\n",
+    "- scaler_y_loaded: The loaded scaler object.\n",
+    "- pred_true_TestSet: DataFrame containing the true and predicted electricity consumption values.\n",
+    "\"\"\"\n",
     "import joblib\n",
     "import pandas as pd\n",
     "# Load the saved scaler\n",
@@ -8025,13 +8159,44 @@
     }
    ],
    "source": [
+    "\n",
     "import pandas as pd\n",
+    "\"\"\"\n",
+    "This script processes and normalizes temperature data from a CSV file, combining training and validation sets.\n",
+    "\n",
+    "Modules:\n",
+    "    pandas\n",
+    "    numpy\n",
+    "    warnings\n",
+    "    FDCS_2_Temp_pre_processing\n",
+    "\n",
+    "Functions:\n",
+    "    preprocess_data(df): Preprocesses the input DataFrame and returns normalized training, validation, and test sets.\n",
+    "\n",
+    "Variables:\n",
+    "    df (DataFrame): The input data read from a CSV file.\n",
+    "    output_names (list): List containing the name of the output variable.\n",
+    "    X_train_normalized (ndarray): Normalized training features.\n",
+    "    y_train_normalized (ndarray): Normalized training labels.\n",
+    "    X_val_normalized (ndarray): Normalized validation features.\n",
+    "    y_val_normalized (ndarray): Normalized validation labels.\n",
+    "    X_test_normalized (ndarray): Normalized test features.\n",
+    "    y_test_normalized (ndarray): Normalized test labels.\n",
+    "    X_train_val_normalized (ndarray): Combined normalized training and validation features.\n",
+    "    y_train_val_normalized (ndarray): Combined normalized training and validation labels.\n",
+    "\n",
+    "Warnings:\n",
+    "    Ignored warnings during execution.\n",
+    "\n",
+    "Prints:\n",
+    "    Shapes of the training, validation, test, and combined training-validation sets.\n",
+    "\"\"\"\n",
     "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Temp_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Temperature Closer to Evaporator (C)']\n",
     "\n",
@@ -9688,7 +9853,7 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "\n",
-    "df = pd.read_csv(r'/home/lixna37/Downloads/FDCSs_Feb_2024/Datasets/FDCS_2/FDCS_2_Humd_Feb_2024.csv')\n",
+    "df = pd.read_csv(r'.csv')\n",
     "\n",
     "output_names = ['Humidity Closer to Evaporator (%)']\n",
     "\n",
